--- a/.env.dev
+++ b/.env.dev
@@ -11,6 +11,9 @@ MAIN_HOST=True
 
 HOSTS_URLS=http://web-sub:5000
 MAIN_HOST_URL=http://web:5000
+TEBI_KEY=
+TEBI_SECRET=
+TEBI_BUCKET=
 
 SQL_ENGINE=postgresql
 SQL_USER=postgres
