--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,5 +1,7 @@
 Flask[async]==2.3.2
-SQLAlchemy==2.0.12
+Flask-SQLAlchemy==3.0.3
+Flask-APScheduler==1.12.4
+psycopg2-binary==2.9.6
 aiohttp==3.8.4
 flask-cors==3.0.10
 tldextract==3.4.0
