--- a/.env.dev
+++ b/.env.dev
@@ -14,6 +14,7 @@ TEBI_BUCKET=
 # Only for main host
 
 HOSTS_URLS=http://web-sub:5000
+VPS_URLS={"main":"http://web:5000","sub":"http://web-sub:5000"}
 MAIN_HOST_URL=http://web:5000
 
 SQL_ENGINE=postgresql
